--- a/package.json
+++ b/package.json
@@ -1,25 +1,41 @@
 {
   "name": "zuckerbergerme",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.1",
+  "repository": "https://github.com/rubyistdotjs/zuckerbergerme",
+  "license": "ISC",
   "private": true,
+  "author": "Romain GUILLOTEAU (https://github.com/rubyistdotjs)",
+  "contributors": [
+    "Franck ERNEWEIN (https://github.com/FranckErnewein)"
+  ],
   "dependencies": {
+    "face-api.js": "^0.16.1",
+    "postcss-import": "^12.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-dropzone": "^7.0.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "yarn watch:css & react-scripts start",
+    "build": "yarn build:css && react-scripts build",
+    "build:css": "postcss src/stylesheets/application.css -o src/application.css",
+    "watch:css": "postcss src/stylesheets/application.css -o src/application.css -w",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "autoprefixer": "^9.3.1",
+    "eslint-plugin-prettier": "^3.0.0",
+    "postcss-cli": "^6.0.1",
+    "prettier": "^1.15.2",
+    "tailwindcss": "^0.7.2"
+  }
 }
