--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,24 @@
 {
   "short_name": "ZUCK!",
   "name": "ZUCKERBERGERME",
+  "lang": "en",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "theme_color": "#794acf",
+  "background_color": "#ffffff",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "48x48 32x32 16x16",
       "type": "image/x-icon"
+    }, {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }, {
+      "src": "icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#22292f",
-  "background_color": "#ffffff"
+  ]
 }
