--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   ],
   "dependencies": {
     "face-api.js": "^0.16.2",
-    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-dropzone": "^8.0.0",
-    "react-scripts": "2.1.2"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "yarn watch:css & react-scripts start",
